# neuro-5

./: .gitignore  BasicTest.cpp  CMakeLists.txt  Doxyfile  MEMBERS.txt  README.md  compilation.sh  index.dox  sync_branch.ch  sync_branch.sh  test-tclap.cpp
apps/: CMakeLists.txt  FindTCLAP.cmake  README.md  main.cpp  main_analytic_fixed_step.cpp  main_analytic_variable_step.cpp  main_explicit.cpp  main_implicit.cpp
apps/analytic_solution/: CMakeLists.txt  main.cpp
apps/explicit_fixed_step/: CMakeLists.txt  efsUserArguments.cpp  efsUserArguments.hpp  main.cpp
apps/implicit_fixed_step/: CMakeLists.txt  ifsUserArguments.cpp  ifsUserArguments.hpp  main.cpp
doc/: CMakeLists.txt  Doxyfile  equations.tex  neuron_plot.tex  neuron_plot_analytic.csv  neuron_plot_analytic_fixed_step.csv  neuron_plot_analytic_variable_step.csv  neuron_plot_explicit.csv  neuron_plot_implicit.csv  raster_plot.csv  raster_plot.tex
doc/csv/: neuron_plot_analytic_fixed_step.csv  neuron_plot_analytic_variable_step.csv  neuron_plot_explicit.csv  neuron_plot_implicit.csv  raster_plot.bak.csv  spiking_rate_analytic_fixed_step.csv  spiking_rate_explicit.csv  spiking_rate_implicit.csv
doc/tex/: equations.tex  neuron_plot.tex  raster_plot.tex
include/: Connection.hpp  CurrentEvent.hpp  Event.hpp  ExternalNeuron.hpp  Network.hpp  Network.hpp.orig  Neuron.hpp  Neuron.hpp.orig  Neurons.hpp  Physics.hpp  Plot.hpp  Simulation.hpp  UserArguments.hpp  physics.hpp
src/: CMakeLists.txt  Event.cpp  Network.cpp  Neuron.cpp  Physics.cpp  README.md  Simulation.cpp  UserArguments.cpp  index.cpp  main.cpp  main.cpp.orig  network.hpp  neuron.cpp  neuron.hpp
test/: AnalyticNeuronTest.cpp  BasicTest.cpp  CMakeLists.txt  ExplicitNeuronTest.cpp  ImplicitNeuronTest.cpp  NeuronTest.cpp  README.md
